fixes alignment issue for select menu

--- a/src/components/SelectMenu/SelectMenu.scss
+++ b/src/components/SelectMenu/SelectMenu.scss
@@ -45,8 +45,8 @@
   position: absolute;
   display: block;
   top: 100%;
-  left: -1px;
-  right: -1px;
+  left: 0px;
+  right: 0px;
   border: 1px solid $border-color;
   border-top: 0;
   background: #fff;
